# campp

./: .gitignore  CMakeLists.txt  install_preprocess_dependencies.bash  kod.cpp
client_files/: auxiliary.py  client_config.json  client_initialization.py
include/: center.hpp  cv_algo.hpp  geometry.hpp  needle.hpp  perimeter.hpp  transform.hpp
lib/: center.cpp  cv_algo.cpp  geometry.cpp  needle.cpp  perimeter.cpp  transform.cpp
preprocess_files/: preprocess.py  preprocess_config.json
raspberry_files/: auxiliary.py  raspberry.py  raspberry_config.json
src/: client_preprocess.cpp  debug.cpp  diff_test.cpp  find_needle.cpp
